--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ crashlytics-build.properties
 /Tutorial Defaults/
 InitCodeMarker
 ProjectSettings/Packages/com.unity.learn.iet-framework/Settings.json
+/Build Game
+/Build Server
